<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity"
    android:padding="10dp"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:transitionName="imageDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        android:scaleType="centerCrop"
        android:src="@drawable/image_programmer"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/detail_image" />

    <Button
        android:id="@+id/btnDetail"
        android:transitionName="btnDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_original"
        android:textColor="?android:attr/colorControlNormal"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_photo"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_photo"
        android:layout_margin="5dp"
        android:elevation="10dp"
        />

    <TextView
        android:id="@+id/titleDetail"
        android:transitionName="titleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_title"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_photo"
        android:layout_marginVertical="10dp"
        />

    <TextView
        android:id="@+id/tv_detail_name"
        android:transitionName="authorDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_author"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="17sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_photo"
        />

    <TextView
        android:id="@+id/tv_detail_description"
        android:transitionName="contentDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description"
        android:fontFamily="@font/quicksand_medium"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_photo"
        android:layout_marginVertical="10dp"
        android:justificationMode="inter_word"
        />

</androidx.constraintlayout.widget.ConstraintLayout>