<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="9dp"
    android:layout_marginHorizontal="9dp"
    android:backgroundTint="@android:color/transparent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_item_layout"
        android:padding="9dp"
        >

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/loading"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/item_image" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/item_title"
            android:textSize="23sp"
            card_view:layout_constraintTop_toBottomOf="@+id/item_image"
            android:textColor="@color/light_text"
            card_view:layout_constraintStart_toStartOf="@+id/item_image"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_description"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="15sp"
            android:textColor="@color/light_text"
            card_view:layout_constraintTop_toBottomOf="@+id/item_title"
            card_view:layout_constraintStart_toStartOf="@+id/item_image"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/item_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_author"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="15sp"
            android:textColor="@color/light_text"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/item_image"
            android:layout_marginTop="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>