<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.RegisterFragment"
    android:background="@drawable/gradient">

    <com.sekalisubmit.storymu.ui.customview.CNotification
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notification"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="35sp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ed_register_name"
        />

    <TextView
        android:id="@+id/tvSubSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_hook"
        android:textSize="15sp"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:layout_constraintStart_toStartOf="@+id/tvSignUp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/login"
        android:textSize="15sp"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:layout_constraintStart_toEndOf="@+id/tvSubSignUp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textColor="?android:attr/colorButtonNormal"
        />

    <com.sekalisubmit.storymu.ui.customview.CEditText
        android:id="@+id/ed_register_name"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        app:useFor="username"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubSignUp"/>

    <com.sekalisubmit.storymu.ui.customview.CEditText
        android:id="@+id/ed_register_email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        app:useFor="email"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"/>

    <com.sekalisubmit.storymu.ui.customview.CEditText
        android:id="@+id/ed_register_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        app:useFor="password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email"/>

    <com.sekalisubmit.storymu.ui.customview.CButton
        android:id="@+id/btnSignUp"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
        android:fontFamily="@font/quicksand_bold"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingHandler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33FFFFFF"
        android:elevation="10dp"
        android:visibility="gone"
        >

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/splash"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>