<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.LandingFragment"
    android:background="@drawable/gradient"
    app:layoutDescription="@xml/fragment_landing_scene">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/image_programmer"
        app:layout_constraintBottom_toTopOf="parent"
        android:contentDescription="@string/header"
        />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/header_1"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/imgHeader"
        app:layout_constraintTop_toBottomOf="@+id/imgHeader" />


    <ImageView
        android:id="@+id/imgHeader2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/image_editor"
        app:layout_constraintStart_toEndOf="parent"
        android:contentDescription="@string/header"
        />

    <TextView
        android:id="@+id/txtHeader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/header_2"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/imgHeader2"
        app:layout_constraintTop_toBottomOf="@+id/imgHeader2" />

    <ImageView
        android:id="@+id/imgHeader3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/header"
        android:scaleType="fitXY"
        android:src="@drawable/image_analyst"
        app:layout_constraintStart_toEndOf="@+id/imgHeader2" />

    <TextView
        android:id="@+id/txtHeader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/header_3"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintTop_toBottomOf="@+id/imgHeader3"
        app:layout_constraintStart_toStartOf="@+id/imgHeader3"
        android:layout_marginStart="50dp"
        />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/slide1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:altSrc="@drawable/ic_circle_fill"
        app:srcCompat="@drawable/ic_circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintVertical_bias="0.68"
        />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/slide2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:altSrc="@drawable/ic_circle_fill"
        app:srcCompat="@drawable/ic_circle"
        app:layout_constraintTop_toTopOf="@id/slide1"
        app:layout_constraintBottom_toBottomOf="@id/slide1"
        app:layout_constraintStart_toStartOf="@id/slide1"
        android:layout_marginStart="30dp"
        />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/slide3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:altSrc="@drawable/ic_circle_fill"
        app:srcCompat="@drawable/ic_circle"
        app:layout_constraintTop_toTopOf="@id/slide2"
        app:layout_constraintBottom_toBottomOf="@+id/slide2"
        app:layout_constraintStart_toStartOf="@id/slide2"
        android:layout_marginStart="30dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="?android:attr/colorButtonNormal"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="?android:attr/colorButtonNormal"
        android:layout_marginTop="10dp"
        />

        <ImageView
            android:id="@+id/imgFooter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            android:src="@drawable/storymu"
            android:contentDescription="@string/app_logo"
            />

</androidx.constraintlayout.motion.widget.MotionLayout>