<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CreateActivity"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/imgStory"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_tertiary"
        app:srcCompat="@drawable/ic_placeholder"
        android:contentDescription="@string/story_image" />

    <com.sekalisubmit.storymu.ui.customview.CButton
        android:id="@+id/galleryButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorControlNormal"
        app:layout_constraintTop_toBottomOf="@+id/imgStory"
        app:layout_constraintStart_toStartOf="@+id/imgStory"
        android:layout_marginVertical="20dp"
        app:textEnable="GALLERY"
        />

    <com.sekalisubmit.storymu.ui.customview.CButton
        android:id="@+id/cameraXButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorControlNormal"
        app:layout_constraintTop_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="@+id/imgStory"
        app:textEnable="CAMERA X"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleStory"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imgStory"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton"
        android:layout_marginTop="20dp"
        app:hintTextColor="?android:attr/colorControlNormal"
        android:textColorHint="?android:attr/colorControlNormal"
        android:background="@drawable/gradient_setting"
        android:hint="@string/story_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_tertiary"
            android:textColor="?android:attr/colorControlNormal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_add_description"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imgStory"
        app:layout_constraintTop_toBottomOf="@+id/titleStory"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_setting"
        app:hintTextColor="?android:attr/colorControlNormal"
        android:textColorHint="?android:attr/colorControlNormal"
        android:hint="@string/story_description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/dark_tertiary"
            android:textColor="?android:attr/colorControlNormal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locFeature"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:background="@drawable/gradient_setting"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/includeLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Include Location"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:id="@+id/includeLocText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Let everyone know your location"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/includeLoc"
            app:layout_constraintStart_toStartOf="@+id/includeLoc"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/includeLoc"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="100dp"
            android:checked="false"
            app:thumbTint="@color/accent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.sekalisubmit.storymu.ui.customview.CButton
        android:id="@+id/button_add"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgStory"
        android:layout_marginBottom="40dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingHandler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        android:elevation="10dp"
        android:visibility="gone"
        >

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/splash"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>